log
Sat Apr 23 11:52:07 HSP 2022: 
 treemap.c | 34 +++++++++++++++++++++++++++++++---
 1 file changed, 31 insertions(+), 3 deletions(-)
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
560e132
Sat Apr 23 11:58:13 HSP 2022: 
 tests:  13|5
total_score: 25/70
6aa7907
Sat Apr 23 12:02:41 HSP 2022: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
4cbdad4
Sat Apr 23 12:16:55 HSP 2022: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
2a5631d
Sat Apr 23 12:21:23 HSP 2022: 
 treemap.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  0|0
a2f1c6e
